# slow-mcp

./: README.md  pyproject.toml
src/: client.mjs  client.py
src/slow_mcp/: __init__.py  fix.py  mcp.py  slow.sh
